Doing OAUTH for week 8
