# routes/routes.js
@@ -2,6 +2,7 @@ const express = require("express");
 const router = express.Router();
 
 const pokemonController = require("../controllers/pokemon");
+const trainerController = require("../controllers/trainer");
 
 router.get("/", pokemonController.getPokemon);
 router.get("/pokemon/:id", pokemonController.getPokemonById);
@@ -9,6 +10,10 @@ router.post("/pokemon", pokemonController.createPokemon);
 router.put("/pokemon/:id", pokemonController.updatePokemon);     // PUT route
 router.delete("/pokemon/:id", pokemonController.deletePokemon);  // DELETE route
 
-
+router.get("/allTrainers", trainerController.getTrainer);
+router.get("/trainer/:id", trainerController.getTrainerById);
+router.post("/trainer", trainerController.createTrainer);
+router.put("/trainer/:id", trainerController.updateTrainer);     // PUT route
+router.delete("/trainer/:id", trainerController.deleteTrainer); 
 
 module.exports = router;
